--- a/app/assets/stylesheets/components/breadcrumb.scss
+++ b/app/assets/stylesheets/components/breadcrumb.scss
@@ -2,6 +2,7 @@
   overflow: hidden;
   > li {
     padding: 7px 0;
+    line-height: 35px;
   }
 }
 
